# bibot-ai

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  config.py  docker-compose.yml  main.py  pyproject.toml
app/: cache_manager.py  config.py  logger.py  main.py
app/agent/: __init__.py  agent.py
app/agent/modules/: executor.py  market_analyzer.py  risk_analyzer.py  strategy_selector.py
app/agent/tools/: execution_tools.py  market_tools.py  risk_tools.py  strategy_tools.py
app/config/: settings.py
app/core/: bibot.py  market_data.py  trading_executor.py
app/core/strategies/: __init__.py  rsi_ema_strategy.py  strategy_base.py
app/models/: config.py  position.py  strategy.py
app/models/binance/: __init__.py  order.py  position.py
app/models/langgraph/: __init__.py  state.py
app/registry/: __init__.py  registry.py
app/services/: order_manager.py  position_manager.py
app/strategies/: __init__.py  factory.py  strategy_base.py
app/strategies/implementations/: rsi_ema_strategy.py
app/utils/: cache_manager.py  data_converter.py  logger.py
app/utils/binance/: client.py
app/utils/logging/: logger.py
app/utils/storage/: cache_manager.py
docs/: architecture.md  technical_architecture.md
