[tool.poetry]
name = "bibot"
version = "0.1.0"
description = "BiBot - Python-based trading bot for Binance Futures that implements scalping strategies"
authors = ["Eza Labs - carlo@ezalabs.io"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.9"
python-binance = "^1.0.19"
pandas = "^2.1.4"
numpy = "^1.26.2"
python-dotenv = "^1.0.0"
ta = "^0.11.0"
pydantic = "^2.11.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"